# devops-ai

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  install.sh  pyproject.toml
.devops-ai/: project.md
docs/designs/kinfra-kworktree/: ARCHITECTURE.md  DESIGN.md  SCENARIOS.md
docs/designs/kinfra-onboard/: ARCHITECTURE.md  (+2 more)
rules/: e2e-testing.md  handoffs.md  project-config.md  quality-gates.md  tdd.md  vertical-slicing.md
skills/kbuild/: SKILL.md
skills/kdesign/: SKILL.md
skills/kdesign-impl-plan/: SKILL.md
skills/kdesign-validate/: SKILL.md
skills/kinfra-onboard/: SKILL.md
skills/kissue/: SKILL.md
skills/kmilestone/: SKILL.md
skills/kplan/: SKILL.md  kplan-categories.md
skills/kreview/: SKILL.md
skills/ktask/: SKILL.md
skills/kworktree/: SKILL.md
skills/shared/: e2e-prompt.md
src/devops_ai/: __init__.py  agent_deck.py  compose.py  config.py  observability.py  ports.py  provision.py  registry.py  sandbox.py  worktree.py
templates/: AGENTS.md.template  project-config.md
templates/observability/: docker-compose.yml
tests/e2e/: conftest.py  test_sandbox_lifecycle.py  test_session_and_skill.py
tests/unit/: test_agent_deck.py  test_cli_done.py  test_cli_done_sandbox.py  test_cli_impl.py  test_cli_impl_session.py  test_cli_init.py  test_cli_observability.py  test_cli_spec.py  test_compose.py  test_config.py  test_impl_provision.py  test_observability.py  test_observability_template.py  test_ports.py  test_provision.py  test_registry.py  test_sandbox.py  test_sandbox_cmd.py  test_sandbox_lifecycle.py  test_smoke.py  test_worktree.py
(+50 files in other folders)
