[project]
name = "devops-ai"
version = "0.1.0"
description = "Developer infrastructure CLI for worktree and sandbox management"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "rich>=13",
    "ruamel.yaml>=0.18",
]

[project.scripts]
kinfra = "devops_ai.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devops_ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests requiring Docker",
]

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
packages = ["devops_ai"]
mypy_path = "src"
strict = false
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.4",
    "mypy>=1.10",
]
